--- a/generators/templates/test.tsx.hbs
+++ b/generators/templates/test.tsx.hbs
@@ -1,13 +1,13 @@
 import { render, screen } from '@testing-library/react'
 
-import {{pascalCase name}} from './index'
+import {{pascalCase name}} from '.'
 
 describe('<{{pascalCase name}} />', () => {
-  it('should render the heading', () => {
+  it('should render ...', () => {
     const { container } = render(<{{pascalCase name}} />)
 
-    expect(screen.getByRole('heading', { name: /{{pascalCase name}}/i })).toBeInTheDocument()
+    //  expect(screen.getByRole('heading', { name: /{{pascalCase name}}/i })).toBeInTheDocument()
 
-    expect(container.firstChild).toMatchSnapshot()
+    //  expect(container.firstChild).toMatchSnapshot()
   });
 });
